fixes pie chart label visibility, adds titles to charts, makes border between charts consistent

--- a/css/main.css
+++ b/css/main.css
@@ -136,14 +136,24 @@ img.center {
 .info-full {
   max-width: 100%;
   padding: 40px;
-  border-top: 1px solid #8dcbdc;
+  border-top: 1px solid #2F98B4;
 }
 
-.info-description {
+.info-description{
   text-align: center;
   max-width: 500px;
   margin: 0 auto;
   padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.chart-title {
+  font-size: 1.3em;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  font-weight: bold;
+  padding-bottom: 1.3em;
 }
 
 
